# python_basics_project

./: .dockerignore  .gitignore  Dockerfile  README.md  abstract_method.py  accounts.json  accounts_test.json  api_interactions.py  collections_functions_practice.py  conditional_practice.py  config.ini.example  config_reader.py  daily_briefing_app.py  data.csv  data_structures_practice.py  data_type_practice.py  decorator_simple.py  docker-compose.yml  hello_world.py  loop_practice.py  main.py  main_app.py  mocking_basics.py  mocking_simple.py  models.py  my_output_old.txt  my_utils.py  oop_practice.py  oop_practice_modified.py  payment_processors.py  processed_data.txt  pyproject.toml  report_generator.py  report_generator_improved.py  test_api_interactions.py  test_bank_account.py  test_daily_briefing_app.py  test_mocking_basics.py  test_mocking_simple.py  test_oop_classes.py  (+4 more)
.github/workflows/: ci.yml
src/daily_briefing/: api_interactions.py  auth.py  config_reader.py  daily_briefing_app.py  database.py  main.py  models.py  weather_client.py  web_api.py
tests/: conftest.py  test_api_interactions.py  test_daily_briefing_app.py  test_main_cli.py  test_oop_classes.py  test_weather_client.py  test_web_api_integration.py  test_web_api_unit.py
