[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-briefing-app"
version = "0.1.0"
authors = [
  { name="Ewa Zahajkiewicz", email="zahajkiewicz@gmail.com" },
]
description = "A command-line tool to generate a daily briefing."
readme = "README.md" # You should create this file!
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# Define the packages your project directly depends on.
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "typer",
    "rich",
    "sqlalchemy",
    "psycopg2-binary"
]

[project.optional-dependencies]
test = [
    "pytest",
    "httpx",
]

[project.urls]
"Homepage" = "https://github.com/zahaj/python_basics_project"
"Bug Tracker" = "https://github.com/zahaj/python_basics_project/issues"

# This is the magic part! It creates a command-line script.
[project.scripts]
briefing = "daily_briefing.main:app"